# tenXten

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html  test.py
app/: app.js  index.html  solver_worker.js  style.css
app/fonts/: m_plus_rounded_1c.css
app/solver/: tenxten.d.ts  tenxten.js  tenxten_bg.js  tenxten_bg.wasm  tenxten_bg.wasm.d.ts
src/: bin.rs  lib.rs  main.rs
