[package]
name = "tenxten"
version = "0.1.0"
authors = ["Simon Niedermayr <14186588+KeKsBoTer@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/KeKsBoTer/tenXten"
description="10x10 game and solver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
priority-queue = "1.1.1"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
js-sys = "0.3.51"

[dev-dependencies]
paste = "1.0.5"

[lib]
name = "tenxten"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tenxten"
path = "src/bin.rs"
